--- a/appfolder/app/src/main/res/anim/rotate.xml
+++ b/appfolder/app/src/main/res/anim/rotate.xml
@@ -4,5 +4,7 @@
         android:toDegrees="360"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:duration="5000" />
+        android:duration="5000"
+        android:repeatCount="infinite"
+        android:repeatMode="restart"/>
 </set>
