--- a/appfolder/app/src/main/res/layout/activity_main.xml
+++ b/appfolder/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.activities.MainActivity">
 
-    <TextView
-        android:id="@+id/test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:text="Hello World!"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <Button
-        android:id="@+id/btn_test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/test" />
 
     <FrameLayout
         android:id="@+id/frame_container"
@@ -35,15 +15,9 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_2" />
+        app:layout_constraintTop_toTopOf="parent" /><![CDATA[
 
-    <ImageView
-        android:id="@+id/img_2"
-        android:layout_width="136dp"
-        android:layout_height="131dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_test"
-        app:srcCompat="@drawable/ic_circle_outline_svgrepo_com" />/>
+    />
 
+]]>
 </androidx.constraintlayout.widget.ConstraintLayout>
