--- a/appfolder/app/src/main/res/layout/activity_main.xml
+++ b/appfolder/app/src/main/res/layout/activity_main.xml
@@ -25,15 +25,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <ImageView
-        android:id="@+id/img_2"
-        android:layout_width="136dp"
-        android:layout_height="131dp"
+    <Button
+        android:id="@+id/create_beacon_button"
+        android:layout_width="175dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:text="Set Your Beacon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_circle_outline_svgrepo_com"
-        android:paddingBottom="30dp"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
-]]>
 </androidx.constraintlayout.widget.ConstraintLayout>
