Adds the count down timer. Selecting a beacon opens up a little panel with person info. It is a dud for now.

--- a/appfolder/app/src/main/res/layout/activity_create_beacon.xml
+++ b/appfolder/app/src/main/res/layout/activity_create_beacon.xml
@@ -61,5 +61,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/beacon_desc" />
 
+    <FrameLayout
+        android:id="@+id/navBar_create_beacon_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
