--- a/appfolder/app/src/main/res/values/colors.xml
+++ b/appfolder/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="light_gray">#D3D3D3</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="radar">#FF96f97b</color>
@@ -13,5 +14,9 @@
     <color name="nav_bar_background">#425fff</color>
     <color name="friend_list_button_icon_color">#FFFFFF</color>
     <color name="filter_button_icon_color">#FFFFFF</color>
-    <color name="light_gray">#D3D3D3</color>
+
+    <color name="current_beacon_background_color">#726fbf</color>
+    <color name="current_beacon_title_color">#222222</color>
+    <color name="current_beacon_count_down_color">#FF55CC</color>
+    <color name="current_beacon_description_color">#444444</color>
 </resources>
