--- a/appfolder/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/appfolder/app/src/main/res/layout/fragment_nav_bar.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/nav_bar_background">
+        android:background="@color/blue_medium">
 
         <TextView
             android:layout_width="wrap_content"
