--- a/appfolder/app/src/main/res/layout/fragment_map.xml
+++ b/appfolder/app/src/main/res/layout/fragment_map.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fragments.MapFragment">
+    tools:context="com.fragments.MapFragment"
+    >
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -25,7 +26,28 @@
             android:layout_height="372dp"
             android:src="@drawable/ic_radar"
             android:layout_gravity="center_vertical |center_horizontal"
-            android:tint="@color/blue_light"/>
+            android:tint="@color/blue_light"
+            android:elevation="1dp"
+            android:alpha=".5"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical |center_horizontal"
+            android:layout_marginTop="210dp"
+            android:text="Distance"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <SeekBar
+            android:id="@+id/distance"
+            android:layout_width="275dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical |center_horizontal"
+            android:layout_marginTop="225dp"
+            android:progress="70" />
+
+
     </FrameLayout>
 
 
