--- a/appfolder/app/src/main/res/values/themes.xml
+++ b/appfolder/app/src/main/res/values/themes.xml
@@ -11,6 +11,8 @@
         <item name="colorOnSecondary">@color/blue_darker</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:colorControlActivated">@color/radar</item>
+        <item name="android:colorControlNormal">@color/gray_medium</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
