--- a/appfolder/app/src/main/res/layout/fragment_select_beacon.xml
+++ b/appfolder/app/src/main/res/layout/fragment_select_beacon.xml
@@ -5,18 +5,17 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="100dp"
         android:padding="10dp"
         android:background="@color/current_beacon_background_color"
         android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +24,7 @@
         android:padding="5dp">
 
         <TextView
-            android:id="@+id/beacon_title"
+            android:id="@+id/beacon_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="1dp"
@@ -40,12 +39,13 @@
             android:text="Count down"
             android:textSize="18dp"
             android:padding="1dp"
+            app:layout_constraintRight_toRightOf="parent"
             android:textColor="@color/current_beacon_count_down_color"/>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,28 +57,28 @@
             android:layout_height="50dp"
             android:layout_marginRight="3dp"
             android:src="@drawable/ic_person"/>
-        <TextView
-            android:id="@+id/beacon_desc"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Description"
-            android:textColor="@color/current_beacon_description_color"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="5dp"
-        android:padding="5dp">
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="@string/current_beacon_open"
-            android:textSize="10dp" />
-
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="5dp"
+            android:padding="5dp">
+            <TextView
+                android:id="@+id/beacon_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:textColor="@color/current_beacon_description_color"/>
+            <TextView
+                android:id="@+id/beacon_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:textColor="@color/current_beacon_description_color"/>
+        </LinearLayout>
     </LinearLayout>
     </LinearLayout>
 
