--- a/appfolder/app/src/main/res/layout/fragment_select_beacon.xml
+++ b/appfolder/app/src/main/res/layout/fragment_select_beacon.xml
@@ -11,7 +11,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:padding="10dp"
-        android:background="@color/current_beacon_background_color"
+        android:background="@color/gray_medium"
         android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,7 +40,7 @@
             android:textSize="18dp"
             android:padding="1dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:textColor="@color/current_beacon_count_down_color"/>
+            android:textColor="@color/radar"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -53,10 +53,10 @@
         android:layout_marginBottom="5dp"
         android:padding="5dp">
         <ImageView
+            android:id="@+id/current_beacon_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginRight="3dp"
-            android:src="@drawable/ic_person"/>
+            android:layout_marginRight="3dp"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
