--- a/appfolder/app/src/main/res/values/colors.xml
+++ b/appfolder/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="radar">#FF96f97b</color>
     <color name="clear">#000000FF</color>
+    <color name="accent">#86ac66</color>
     <color name="beacon_title_text_color">#FFFFFF</color>
     <color name="nav_bar_background">#425fff</color>
     <color name="friend_list_button_icon_color">#FFFFFF</color>
