--- a/appfolder/app/src/main/res/layout/fragment_select_beacon.xml
+++ b/appfolder/app/src/main/res/layout/fragment_select_beacon.xml
@@ -11,7 +11,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:padding="10dp"
-        android:background="@color/gray_medium"
+        android:background="@color/blue_medium"
         android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="1dp"
             android:text="My Beacon Name"
-            android:textColor="@color/current_beacon_title_color"
+            android:textColor="@color/white"
             android:textSize="15dp" />
 
         <TextView
@@ -71,13 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Description"
-                android:textColor="@color/current_beacon_description_color"/>
-            <TextView
-                android:id="@+id/beacon_desc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Description"
-                android:textColor="@color/current_beacon_description_color"/>
+                android:textColor="@color/white"/>
         </LinearLayout>
     </LinearLayout>
     </LinearLayout>
