--- a/appfolder/app/src/main/res/drawable/loading.xml
+++ b/appfolder/app/src/main/res/drawable/loading.xml
@@ -11,49 +11,49 @@
             <path
                 android:name="dot_mid"
                 android:pathData="M 11.602 12 C 11.602 11.781 11.78 11.603 12.001 11.603 C 12.22 11.603 12.398 11.781 12.398 12 C 12.398 12.219 12.22 12.397 12.001 12.397 C 11.78 12.397 11.602 12.219 11.602 12 Z"
-                android:fillColor="#979797"
-                android:strokeColor="#979797"
+                android:fillColor="@color/loading"
+                android:strokeColor="@color/loading"
                 android:strokeWidth="0.1"/>
             <path
                 android:name="5"
                 android:pathData="M 11.602 12 C 11.602 11.781 11.78 11.603 12.001 11.603 C 12.22 11.603 12.398 11.781 12.398 12 C 12.398 12.219 12.22 12.397 12.001 12.397 C 11.78 12.397 11.602 12.219 11.602 12 Z"
-                android:fillColor="#D8D8D8"
+                android:fillColor="@color/loading"
                 android:fillAlpha="0"
-                android:strokeColor="#979797"
+                android:strokeColor="@color/loading"
                 android:strokeWidth="0.2"/>
             <path
                 android:name="4"
                 android:pathData="M 11.602 12 C 11.602 11.781 11.78 11.603 12.001 11.603 C 12.22 11.603 12.398 11.781 12.398 12 C 12.398 12.219 12.22 12.397 12.001 12.397 C 11.78 12.397 11.602 12.219 11.602 12 Z"
-                android:fillColor="#D8D8D8"
+                android:fillColor="@color/loading"
                 android:fillAlpha="0"
-                android:strokeColor="#979797"
+                android:strokeColor="@color/loading"
                 android:strokeWidth="0.2"/>
             <path
                 android:name="3"
                 android:pathData="M 11.602 12 C 11.602 11.781 11.78 11.603 12.001 11.603 C 12.22 11.603 12.398 11.781 12.398 12 C 12.398 12.219 12.22 12.397 12.001 12.397 C 11.78 12.397 11.602 12.219 11.602 12 Z"
-                android:fillColor="#D8D8D8"
+                android:fillColor="@color/loading"
                 android:fillAlpha="0"
-                android:strokeColor="#979797"
+                android:strokeColor="@color/loading"
                 android:strokeWidth="0.2"/>
             <path
                 android:name="2"
                 android:pathData="M 11.602 12 C 11.602 11.781 11.78 11.603 12.001 11.603 C 12.22 11.603 12.398 11.781 12.398 12 C 12.398 12.219 12.22 12.397 12.001 12.397 C 11.78 12.397 11.602 12.219 11.602 12 Z"
-                android:fillColor="#D8D8D8"
+                android:fillColor="@color/loading"
                 android:fillAlpha="0"
-                android:strokeColor="#979797"
+                android:strokeColor="@color/loading"
                 android:strokeWidth="0.2"/>
             <path
                 android:name="1"
                 android:pathData="M 11.602 12 C 11.602 11.781 11.78 11.603 12.001 11.603 C 12.22 11.603 12.398 11.781 12.398 12 C 12.398 12.219 12.22 12.397 12.001 12.397 C 11.78 12.397 11.602 12.219 11.602 12 Z"
-                android:fillColor="#D8D8D8"
+                android:fillColor="@color/loading"
                 android:fillAlpha="0"
-                android:strokeColor="#979797"
+                android:strokeColor="@color/loading"
                 android:strokeWidth="0.2"/>
             <path
                 android:name="rod"
                 android:pathData="M 12 12 L 19 12 Z"
-                android:fillColor="#D8D8D8"
-                android:strokeColor="#979797"
+                android:fillColor="@color/loading"
+                android:strokeColor="@color/loading"
                 android:strokeWidth="0.3"
                 android:strokeLineCap="round"
                 android:strokeLineJoin="round"/>
